model training added

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -16,3 +16,9 @@ data_transformation:
   root_dir: assets/data_transformation
   data_path: assets/data_ingestion/fedex.csv
 
+model_trainer:
+  root_dir: assets/model_trainer
+  train_data_path: assets/data_transformation/train.csv
+  test_data_path: assets/data_transformation/test.csv
+  model_name: model.joblib
+
